<resources>
    <string name="app_name">Udacity Inventory</string>
    <string name="unknown_product">Unnamed Product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product Updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_view_title_text">No products</string>
    <string name="empty_view_subtitle_text">Add products to inventory</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="productName_label">Product Name</string>
    <string name="productprice_label">Product Price</string>
    <string name="hint_product_name">Enter Product Name</string>
    <string name="hint_product_price">Enter Product Price</string>
    <string name="productQuantity_label">Product Quantity</string>
    <string name="decrease_quantity">-</string>
    <string name="increase_quantity">+</string>
    <string name="label_sec_supplier">Supplier Detaials</string>
    <string name="hint_supplier_name">Enter Supplier Name</string>
    <string name="hint_supplier_contact">Supplier Contact</string>
    <string name="button_order_product">Order more</string>
    <string name="list_sell">Sell</string>
    <string name="prompt_fill_details">"Please fill all product details"</string>
    <string name="label_supplier_name">Supplier Name</string>
    <string name="hint_enter_contactDetails">Enter Contact details</string>
</resources>
